...
    var suggestions: [Suggestion]?
    var resultSearchController = UISearchController()
    var hasFavorites = false
    
    override func viewDidLoad() {
        super.viewDidLoad()
        view.accessibilityIdentifier = "Home"
        
        configureLocation()
        configureSearchController()
    }
    
    override func viewDidAppear(_ animated: Bool) {
...
        return 1
    }
    
    override func tableView(_ tableView: UITableView, cellForRowAt indexPath: IndexPath) -> UITableViewCell {
        if indexPath.section == 1 {
            let cell = tableView.dequeueReusableCell(withIdentifier: "GoToFavoritesCell", for: indexPath)
            cell.accessibilityIdentifier = "FavoriteCell"
            
            return cell
        }
        
        let cell = tableView.dequeueReusableCell(withIdentifier: "Cell", for: indexPath)
        
...
