...
    var suggestion: Suggestion!
    var locationCoordinate: CLLocationCoordinate2D?
    var currentMarker: NMAMapMarker?
    
    override func viewDidLoad() {
        super.viewDidLoad()
        view.accessibilityIdentifier = "Details"
        
        setTitle()
        checkFavorite()
        fetchDetails()
    }
    
...
